# dukascopy

./: .gitignore  CODEOWNERS  README.md  _instrument_generator.py
.github/: CODEOWNERS
dart/dukascopy/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
dart/dukascopy/example/: dukascopy_example.dart
dart/dukascopy/lib/: dukascopy.dart
dart/dukascopy/lib/src/: dukascopy_base.dart  instrument_generator.dart  instruments.dart  models.dart
dart/dukascopy/test/: dukascopy_test.dart
go/: Makefile  README.md  examples.go  go.mod  main.go
go/dukascript/: dukascript.go  examples.go  go.mod  instruments.go
go/examples/: examples.go
python/: .gitignore  Makefile  README.md  pyproject.toml
rust/dukascopy_rust/: CHANGELOG.md  Cargo.toml  README.md
rust/dukascopy_rust/examples/: dukascopy_example.rs
rust/dukascopy_rust/src/: dukascopy_base.rs  instrument_generator.rs  lib.rs  models.rs
rust/dukascopy_rust/tests/: integration_test.rs
typescript/: README.md
