[package]
name = "dukascopy_rust"
version = "0.1.0"
edition = "2021"
description = "Rust wrapper for Dukascopy’s free charting API"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["clock"] }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
